--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <h1>Hello, I'm <br>  Mark Paul Cañeda <br> UX-UI Designer</h1>
                         <p>There is no specific medicine to prevent or treat coronavirus disease (COVID-19). People may need supportive care to .</p>
                         <a href="/" class="btn btn-danger">
-                            <span class="pl-1">Download Resume</span> 
+                           Download Resume
                         </a>
                     </div>
                     <img src="assets/media/banner.svg" class="home-banner-img" alt="" />
