--- a/index.html
+++ b/index.html
@@ -58,22 +58,94 @@
     </header>
     
     <!-- Main wrapper -->
-    <main class="page-wrapper">
+    <main class="main-wrapper">
+        <!-- Home Banner -->
         <section class="section">
             <div class="container">
                 <div class="banner-flex-items">
                     <div class="home-banner-content">
                         <h1>Hello, I'm <br>  Mark Paul Cañeda <br> UX-UI Designer</h1>
-                        <p>There is no specific medicine to prevent or treat coronavirus disease (COVID-19). People may need supportive care to .</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed quas, fugit eos illum asperiores sequi.</p>
                         <a href="/" class="btn btn-danger">
-                           Download Resume
+                           Download Resume   
                         </a>
                     </div>
                     <img src="assets/media/banner.svg" class="home-banner-img" alt="" />
                 </div>
             </div>
         </section>
+
+        <!-- Skill Sets -->
+        <section class="section-skill-set">
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-6">
+                                <div class="card card-skill-set">
+                                    <div class="card-body">
+                                        <img src="assets/media/ui-ux-design.svg" alt="" />
+                                        <span>UI-UX Design</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-6">
+                                <div class="card card-skill-set">
+                                    <div class="card-body">
+                                        <img src="assets/media/website-design.svg" alt="" />
+                                        <span>Web Design</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-6">
+                                <div class="card card-skill-set">
+                                    <div class="card-body">
+                                        <img src="assets/media/apps-design.svg" alt="" />
+                                        <span>Apps Design</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-6">
+                                <div class="card card-skill-set">
+                                    <div class="card-body">
+                                        <img src="assets/media/ui-ux-design.svg" alt="" />
+                                        <span>UI-UX Design</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-6">
+                                <div class="card card-skill-set">
+                                    <div class="card-body">
+                                        <img src="assets/media/website-design.svg" alt="" />
+                                        <span>Web Design</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-6">
+                                <div class="card card-skill-set">
+                                    <div class="card-body">
+                                        <img src="assets/media/apps-design.svg" alt="" />
+                                        <span>Apps Design</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-5 col-md-12 d-flex justify-content-center">
+                        <img src="assets/media/computer-stat.svg" class="skill-set-img-stat" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="main-footer">
+        <div class="container">
+            <div class="footer-bottom">
+                <span>Copyright &copy; 2021. All Rights Reserved. Atlassian.</span>
+            </div>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
