--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
         <!-- Skill Sets -->
         <section class="section-skill-set">
             <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="section-header text-center">
+                            <h2>My Best Skills</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ad vitae voluptates, magnam reprehenderit nisi vel.</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12">
                         <div class="row">
