ui updates for header navbar

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                             <a href="/"><i class="bi-twitter"></i></a>
                         </li>
                     </ul>
+                    <a href="/" class="toggle-dark-mode">
+                        <i class="bi-circle-half"></i>
+                    </a>
                 </div>
             </div>
         </nav>
