--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="navbar-flex-items">
                     <a class="navbar-brand" href="#">
-                        <img src="assets/media/logo-brand.svg" alt="" width="30">
+                        <i class="bi-code-slash"></i>
                         <span>Atlassian</span>
                     </a>
                     <ul class="navbar-item-menu">
@@ -52,9 +52,6 @@
                             <a href="/"><i class="bi-twitter"></i></a>
                         </li>
                     </ul>
-                    <a href="/" class="toggle-dark-mode">
-                        <i class="bi-circle-half"></i>
-                    </a>
                 </div>
             </div>
         </nav>
@@ -95,7 +92,7 @@
                             <div class="col-lg-4 col-md-4 col-6">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
-                                        <img src="assets/media/ui-ux-design.svg" alt="" />
+                                        <i class="bi-calendar2-week"></i>
                                         <span>UI-UX Design</span>
                                     </div>
                                 </div>
@@ -103,7 +100,7 @@
                             <div class="col-lg-4 col-md-4 col-6">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
-                                        <img src="assets/media/website-design.svg" alt="" />
+                                        <i class="bi-laptop"></i>
                                         <span>Web Design</span>
                                     </div>
                                 </div>
@@ -111,7 +108,7 @@
                             <div class="col-lg-4 col-md-4 col-6">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
-                                        <img src="assets/media/apps-design.svg" alt="" />
+                                        <i class="bi-phone"></i>
                                         <span>Apps Design</span>
                                     </div>
                                 </div>
@@ -119,24 +116,24 @@
                             <div class="col-lg-4 col-md-4 col-6">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
-                                        <img src="assets/media/ui-ux-design.svg" alt="" />
-                                        <span>UI-UX Design</span>
+                                        <i class="bi-puzzle"></i>
+                                        <span>Front-end</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-6">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
-                                        <img src="assets/media/website-design.svg" alt="" />
-                                        <span>Web Design</span>
+                                        <i class="bi-code-square"></i>
+                                        <span>Back-end</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-6">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
-                                        <img src="assets/media/apps-design.svg" alt="" />
-                                        <span>Apps Design</span>
+                                        <i class="bi-bar-chart-steps"></i>
+                                        <span>System Design</span>
                                     </div>
                                 </div>
                             </div>
@@ -160,6 +157,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
