darkmode blend updates

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-bar-chart-steps"></i>
-                                        <span>System Design</span>
+                                        <span>SEO</span>
                                     </div>
                                 </div>
                             </div>
