--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
     
     <!-- Main wrapper -->
-    <main class="main-wrapper">
+    <main>
         <!-- Home Banner -->
         <section class="section">
             <div class="container">
