--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <!-- Main wrapper -->
     <main>
         <!-- Home Banner -->
-        <section class="section">
+        <section class="section-banner">
             <div class="container">
                 <div class="banner-flex-items">
                     <div class="home-banner-content">
-                        <h1>Hello, I'm <br>  Mark Paul Cañeda <br> UX-UI Designer</h1>
+                        <h1>Hello, I'm <br>  Mark Paul Cañeda, <br> a Full-stack web developer</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed quas, fugit eos illum asperiores sequi.</p>
                         <a href="/" class="btn btn-danger">
                            Download Resume   
@@ -81,7 +81,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-header text-center">
-                            <h2>My Best Skills</h2>
+                            <h2>What I Offer You</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ad vitae voluptates, magnam reprehenderit nisi vel.</p>
                         </div>
                     </div>
