--- a/index.html
+++ b/index.html
@@ -78,6 +78,41 @@
         <!-- Skill Sets -->
         <section class="section-skill-set">
             <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-xl-6 col-lg-5 col-md-12 d-flex justify-content-center">
+                        <img src="assets/media/about.svg" class="skill-set-img-stat" alt="" />
+                    </div>
+                    <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12">
+                        <div class="section-header">
+                            <h2>About Myself</h2>
+                            <p>For over 2 years i have been successfully proviging business information to people.</p>
+                            <p>I'm an Information System (IS) College student, I like to create simple & standard UI/UX design and development, it's my profession to create client's projects that make a smile after done.</p>
+
+                            <ul class="contact-flex-items">
+                                <li>
+                                    <i class="bi-person"></i>
+                                    <a href="/" class="contact-item">Name: Mark Paul Acebo Cañeda </a>
+                                </li>
+                                <li>
+                                    <i class="bi-telephone"></i>
+                                    <a href="tel:+6392759420158" class="contact-item">Phone: +6392759420158</a> 
+                                </li>
+                                <li>
+                                    <i class="bi-envelope"></i>
+                                    <a href="mailto:markpaulcaneda19@gmail.com" class="contact-item">
+                                        Mail: markpaulcaneda19@gmail.com
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Skill Sets -->
+        <section class="section-skill-set">
+            <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-header text-center">
