--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                                     </a>
                                 </li>
                             </ul>
+
+                            <a href="mailto:markpaulcaneda19@gmail.com" class="btn btn-danger mt-1">
+                                Let's Talk!   
+                            </a>
                         </div>
                     </div>
                 </div>
