meta tags updates

--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <!-- Meta Tags -->
     <meta http-equiv="Content-Type" content="text/html;" charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-    <meta name="description" content="The First Diagnostics App in the Philippines. Monitor your Health Anytime, Anywhere." />
-    <meta name="title" content="" />
+    <meta name="description" content="Design makes anything when you call myself" />
+    <meta name="title" content="Mark Paul Acebo Cañeda" />
     <meta name="keywords" content="Web Developer, Portfolio" />
     <meta name="author" content="Mark Paul Acebo Cañeda" />
-    <meta name="copyright" content="DMark Paul Acebo Cañeda Portfolio" />
+    <meta name="copyright" content="Mark Paul Acebo Cañeda Portfolio" />
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MP - Portfolio</title>
+    <!-- Open graph meta tags promote integration between Facebook, LinkedIn, Google, and your website. -->
+    <meta property="og:type" content="portfolio website" />
+    <meta property="og:title" content="Mark Paul Acebo Cañeda" />
+    <meta property="og:description" content="Design makes anything when you call myself" />
+    <meta property="og:image" content="assets/media/banner.svg" />
+    <meta property="og:image:type" content="image/svg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+    <meta property="og:url" content="https://gitmarkpaul.github.io/portfolio-dev/" />
+    <meta property="og:site_name" content="Mark Paul Acebo Cañeda" />
+    <title>Mark Paul</title>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
