--- a/index.html
+++ b/index.html
@@ -206,20 +206,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script src="assets/js/scripts.js"></script>
-    <script>
-        // ServiceWorker is a progressive technology. Ignore unsupported browsers
-        if ('serviceWorker' in navigator) {
-        console.log('CLIENT: service worker registration in progress.');
-        navigator.serviceWorker.register('/assets/js/service-worker.js').then(function() {
-            console.log('CLIENT: service worker registration complete.');
-        }, function() {
-            console.log('CLIENT: service worker registration failure.');
-        });
-        } else {
-        console.log('CLIENT: service worker is not supported.');
-        }
-    </script>
 </body>
 </html>
