--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <!-- Meta Tags -->
     <meta http-equiv="Content-Type" content="text/html;" charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-    <meta name="description" content="Design makes anything when you call myself" />
-    <meta name="title" content="Mark Paul Acebo Cañeda" />
     <meta name="keywords" content="Web Developer, Portfolio" />
     <meta name="author" content="Mark Paul Acebo Cañeda" />
     <meta name="copyright" content="Mark Paul Acebo Cañeda Portfolio" />
@@ -15,27 +13,22 @@
     <meta property="og:type" content="portfolio website" />
     <meta property="og:title" content="Mark Paul Acebo Cañeda" />
     <meta property="og:description" content="Design makes anything when you call myself" />
-    <meta property="og:image" content="assets/media/banner.svg" />
-    <meta property="og:image:type" content="image/svg">
+    <meta property="og:image" content="assets/media/banner-screen.jpg" />
+    <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:url" content="https://gitmarkpaul.github.io/portfolio-dev/" />
     <meta property="og:site_name" content="Mark Paul Acebo Cañeda" />
     <title>Mark Paul</title>
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-
     <!-- Favicon -->
     <link type="image/x-icon" rel="icon" href="assets/media/logo-brand.svg" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
@@ -95,7 +88,7 @@
                     <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12">
                         <div class="section-header">
                             <h2>About Myself</h2>
-                            <p>For over 2 years i have been successfully proviging business information to people.</p>
+                            <p>For over 2 years i have been successfully providing business information to people.</p>
                             <p>I'm an Information System (IS) College student, I like to create simple & standard UI/UX design and development, it's my profession to create client's projects that make a smile after done.</p>
 
                             <ul class="contact-flex-items">
@@ -199,7 +192,7 @@
     <footer class="main-footer">
         <div class="container">
             <div class="footer-bottom">
-                <span>Copyright &copy; 2021. All Rights Reserved. Atlassian.</span>
+                <span>Copyright &copy; <span id="currentYear"></span>. All Rights Reserved. Atlassian.</span>
             </div>
         </div>
     </footer>
