--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image:height" content="300">
     <meta property="og:url" content="https://gitmarkpaul.github.io/portfolio-dev/" />
     <meta property="og:site_name" content="Mark Paul Acebo Cañeda" />
-    <title>Mark Paul</title>
+    <title>Mark Paul - Codexus</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,15 +34,14 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
 </head>
 <body>
-
     <header class="main-header">
         <!-- Navbar -->
         <nav class="navbar navbar-light">
             <div class="container">
                 <div class="navbar-flex-items">
                     <a class="navbar-brand" href="#">
-                        <i class="bi-code-slash"></i>
-                        <span>Atlassian</span>
+                        <img src="assets/media/logo-brand.svg" alt="">
+                        <span>Codexus</span>
                     </a>
                     <ul class="navbar-item-menu">
                         <li>
@@ -78,8 +77,8 @@
             </div>
         </section>
 
-        <!-- Skill Sets -->
-        <section class="section-skill-set">
+        <!-- About Section -->
+        <section class="about-section">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-6 col-lg-5 col-md-12 d-flex justify-content-center">
@@ -98,7 +97,7 @@
                                 </li>
                                 <li>
                                     <i class="bi-telephone"></i>
-                                    <a href="tel:+6392759420158" class="contact-item">Phone: +6392759420158</a> 
+                                    <a href="tel:+6392759420158" class="contact-item">Phone: +639275942058</a> 
                                 </li>
                                 <li>
                                     <i class="bi-envelope"></i>
@@ -192,7 +191,7 @@
     <footer class="main-footer">
         <div class="container">
             <div class="footer-bottom">
-                <span>Copyright &copy; <span id="currentYear"></span>. All Rights Reserved. Atlassian.</span>
+                <span>Copyright &copy; <span id="currentYear"></span>. All Rights Reserved. Mark Paul Cañeda - Codexus.</span>
             </div>
         </div>
     </footer>
