--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     </a>
                     <ul class="navbar-item-menu">
                         <li>
-                            <a href="/"><i class="bi-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/mark-paul-cañeda-b5a1911a0" target="__blank" rel="noopener"><i class="bi-linkedin"></i></a>
                         </li>
                         <li>
-                            <a href="/"><i class="bi-facebook"></i></a>
+                            <a href="https://www.facebook.com/markpaul.caneda.7" target="__blank" rel="noopener"><i class="bi-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="/"><i class="bi-twitter"></i></a>
+                            <a href="https://github.com/GitMarkPaul" target="__blank" rel="noopener"><i class="bi-github"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -67,7 +67,7 @@
                 <div class="banner-flex-items">
                     <div class="home-banner-content">
                         <h1>Hello, I'm <br>  Mark Paul Cañeda, <br> a Full-stack web developer</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed quas, fugit eos illum asperiores sequi.</p>
+                        <p>I'm an Information System (IS) College student, I like to create simple & standard UI/UX design and development, it's my profession to create client's projects that make a smile after done.</p>
                         <a href="/" class="btn btn-danger">
                            Download Resume   
                         </a>
@@ -88,7 +88,7 @@
                         <div class="section-header">
                             <h2>About Myself</h2>
                             <p>For over 2 years i have been successfully providing business information to people.</p>
-                            <p>I'm an Information System (IS) College student, I like to create simple & standard UI/UX design and development, it's my profession to create client's projects that make a smile after done.</p>
+                            <p>Experienced Full-stack Web Developer with a demonstrated history of working in the information technology and services industry. Skilled in Back-end and Front-end Development. Strong engineering professional graduated from La Verdad Christian College, Apalit Pampanga. </p>
 
                             <ul class="contact-flex-items">
                                 <li>
@@ -129,8 +129,8 @@
                 </div>
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12">
-                        <div class="row">
-                            <div class="col-lg-4 col-md-4 col-6">
+                        <div class="row row-cols-2 row-cols-lg-3 row-cols-md-3 justify-content-center g-3">
+                            <div class="col">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-calendar2-week"></i>
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-6">
+                            <div class="col">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-laptop"></i>
@@ -146,7 +146,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-6">
+                            <div class="col">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-phone"></i>
@@ -154,7 +154,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-6">
+                            <div class="col">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-puzzle"></i>
@@ -162,7 +162,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-6">
+                            <div class="col">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-code-square"></i>
@@ -170,7 +170,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-6">
+                            <div class="col">
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-bar-chart-steps"></i>
