--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
             <div class="container">
                 <div class="banner-flex-items">
                     <div class="home-banner-content">
-                        <h1>Hello, I'm <br>  Mark Paul Cañeda, <br> a Full-stack web developer</h1>
-                        <p>I'm an Information System (IS) College student, I like to create simple & standard UI/UX design and development, it's my profession to create client's projects that make a smile after done.</p>
-                        <a href="/" class="btn btn-danger">
-                           Download Resume   
-                        </a>
+                        <h1>Hello, I'm <br>  Mark Paul Cañeda, <br> a Full Stack web developer</h1>
+                        <p>A goal-oriented Full Stack Web Developer with strong commitment to collaboration and problem-solving. Uses various web design packages in developing custom-crafted websites and designs in providing the customers desired output. Committed to high standards of user experience, usability and speed.</p>
+                        <a href="https://drive.google.com/file/d/1pxVNxXov0fYjCHWDCLTR5yxulrEEENRo/view?usp=sharing" target="__blank" rel="noopener"  class="btn btn-danger">Download Resume</a>
                     </div>
                     <img src="assets/media/banner.svg" class="home-banner-img" alt="" />
                 </div>
@@ -150,7 +148,7 @@
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-phone"></i>
-                                        <span>Apps Design</span>
+                                        <span>Mobile Design</span>
                                     </div>
                                 </div>
                             </div>
@@ -158,7 +156,7 @@
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-puzzle"></i>
-                                        <span>Front-end</span>
+                                        <span>Front-end Development</span>
                                     </div>
                                 </div>
                             </div>
@@ -166,7 +164,7 @@
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-code-square"></i>
-                                        <span>Back-end</span>
+                                        <span>Back-end Development</span>
                                     </div>
                                 </div>
                             </div>
@@ -174,7 +172,7 @@
                                 <div class="card card-skill-set">
                                     <div class="card-body">
                                         <i class="bi-bar-chart-steps"></i>
-                                        <span>SEO</span>
+                                        <span>Search Engine Optimization</span>
                                     </div>
                                 </div>
                             </div>
