--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
     <script src="assets/js/scripts.js"></script>
     <script>
         if('serviceWorker' in navigator){
-          navigator.serviceWorker.register('/service-worker.js');
+            navigator.serviceWorker.register('./service-worker.js');
         } else {
-          console.log("Service worker is not supported");
+            console.log("Service worker is not supported");
         }
       </script>
 </body>
