--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <header class="main-header">
         <!-- Navbar -->
-        <nav class="navbar navbar-light">
+        <nav class="navbar">
             <div class="container">
                 <div class="navbar-flex-items">
                     <a class="navbar-brand" href="#">
@@ -109,10 +109,6 @@
                                     </a>
                                 </li>
                             </ul>
-
-                            <a href="mailto:markpaulcaneda19@gmail.com" class="btn btn-danger mt-1">
-                                Let's Talk!   
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -134,7 +130,7 @@
                     <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12">
                         <div class="row row-cols-2 row-cols-lg-3 row-cols-md-3 justify-content-center g-3">
                             <div class="col">
-                                <div class="card card-skill-set">
+                                <div class="card card-skill-set h-100">
                                     <div class="card-body">
                                         <i class="bi-calendar2-week"></i>
                                         <span>UI-UX Design</span>
@@ -142,7 +138,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="card card-skill-set">
+                                <div class="card card-skill-set h-100">
                                     <div class="card-body">
                                         <i class="bi-laptop"></i>
                                         <span>Web Design</span>
@@ -150,7 +146,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="card card-skill-set">
+                                <div class="card card-skill-set h-100">
                                     <div class="card-body">
                                         <i class="bi-phone"></i>
                                         <span>Mobile Design</span>
@@ -158,7 +154,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="card card-skill-set">
+                                <div class="card card-skill-set h-100">
                                     <div class="card-body">
                                         <i class="bi-puzzle"></i>
                                         <span>Front-end Development</span>
@@ -166,7 +162,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="card card-skill-set">
+                                <div class="card card-skill-set h-100">
                                     <div class="card-body">
                                         <i class="bi-code-square"></i>
                                         <span>Back-end Development</span>
@@ -174,10 +170,18 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="card card-skill-set">
+                                <div class="card card-skill-set h-100">
                                     <div class="card-body">
                                         <i class="bi-bar-chart-steps"></i>
                                         <span>Search Engine Optimization</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100">
+                                    <div class="card-body">
+                                        <i class="bi-app-indicator"></i>
+                                        <span>Progressive Web Apps</span>
                                     </div>
                                 </div>
                             </div>
