updates in ui and content and put description in sw

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
         <!-- About Section -->
-        <section class="about-section">
+        <section class="section-skill-set">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-6 col-lg-5 col-md-12 d-flex justify-content-center">
@@ -91,24 +91,7 @@
                         <div class="section-header">
                             <h2>About Myself</h2>
                             <p>For over 2 years i have been successfully providing business information to people.</p>
-                            <p>Experienced Full-stack Web Developer with a demonstrated history of working in the information technology and services industry. Skilled in Back-end and Front-end Development. Strong engineering professional graduated from La Verdad Christian College, Apalit Pampanga. </p>
-
-                            <ul class="contact-flex-items">
-                                <li>
-                                    <i class="bi-person"></i>
-                                    <a href="/" class="contact-item">Name: Mark Paul Acebo Cañeda </a>
-                                </li>
-                                <li>
-                                    <i class="bi-telephone"></i>
-                                    <a href="tel:+6392759420158" class="contact-item">Phone: +639275942058</a> 
-                                </li>
-                                <li>
-                                    <i class="bi-envelope"></i>
-                                    <a href="mailto:markpaulcaneda19@gmail.com" class="contact-item">
-                                        Mail: markpaulcaneda19@gmail.com
-                                    </a>
-                                </li>
-                            </ul>
+                            <p>Experienced Full-stack Web Developer with a demonstrated history of working in the information technology and services industry. Skilled in Back-end and Front-end Development. Strong engineering professional graduated from La Verdad Christian College, Apalit Pampanga.</p>
                         </div>
                     </div>
                 </div>
@@ -127,8 +110,8 @@
                     </div>
                 </div>
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12">
-                        <div class="row row-cols-2 row-cols-lg-3 row-cols-md-3 justify-content-center g-3">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <div class="row row-cols-2 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
@@ -172,6 +155,14 @@
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
+                                        <i class="bi-layers"></i>
+                                        <span>Dynamic & Static Websites</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100">
+                                    <div class="card-body">
                                         <i class="bi-bar-chart-steps"></i>
                                         <span>Search Engine Optimization</span>
                                     </div>
@@ -187,12 +178,51 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-5 col-md-12 d-flex justify-content-center">
-                        <img src="assets/media/computer-stat.svg" class="skill-set-img-stat" alt="" />
-                    </div>
                 </div>
             </div>
         </section>
+
+        <!-- Skill Sets -->
+        <section class="section-skill-set">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section-header text-center">
+                        <h2>Contact Information</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ad vitae voluptates, magnam reprehenderit nisi vel.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-between">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <div class="row row-cols-2 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
+                        <div class="col">
+                            <a href="mailto:markpaulcaneda19@gmail.com">
+                                <div class="card card-skill-set h-100">
+                                    <div class="card-body">
+                                        <i class="bi-envelope"></i>
+                                        <span>Email</span>
+                                        <small class="text-muted mt-1">markpaulcaneda19@gmail.com</small>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="tel:+6392759420158">
+                                <div class="card card-skill-set h-100">
+                                    <div class="card-body">
+                                        <i class="bi-telephone"></i>
+                                        <span>Phone</span>
+                                        <small class="text-muted mt-1">+639275942058</small>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
 
     <footer class="main-footer">
